Bug 1495301 - Disbale payment-request web-platform tests on non-nightly build. r=a=test-only,revert